--- a/recipes/boiledmimic.html
+++ b/recipes/boiledmimic.html
@@ -11,6 +11,27 @@
 <h1>Boiled Mimic</h1>
 
 <img src="imgs/boiledmimic.jpg" alt="Boiled Mimic Dish">
+<p>Mimic Boiled with Salt</p>
+
+<h4>Recipe Description</h4>
+
+<p>It is prepared by boiling together only mimic and salt, and eaten much like other shellfish, using thin tools to dig out the chewy, flavorful meat.</p>
+
+<h4>Ingredients</h4>
+<ul>
+<li>Mimic upper body</li>
+<li>Claws</li>
+<li>Legs</li>
+<li>Lots of salt</li>    
+</ul>
+
+<h4>Steps</h4>
+<ol>
+<li>Clean the mimic carcace</li>
+<li>Cut its aprts and add it on a boiler pan</li>   
+<li>Add a lot of Slat and cook it</li>
+<li>Enjoy!</li>
+</ol>
+
 
 </body>
-</html>
