Finish the basilisk and mandrake omelet recipe
Add the image, the steps in preparation, the ingredients and a brief
description of the basilisk and mandrake omelete recipe.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
-<h1>Odin Recipes from Dungeon Meshi</h1>
 
-<a href="./recipes/boiledmimic.html">Boiled Mimic</a>
-
+    <h1>Odin Recipes from Dungeon Meshi</h1>
+    <ul>
+        <li><a href="./recipes/boiledmimic.html">Boiled Mimic</a></li>
+        <li><a href="./recipes/planttart.html">Man-Eating Plant Tart</a></li>
+        <li><a href="./recipes/mbomelet.html">Mandrake and Basilisk Omelet</a></li>
+    </ul>
 </body>
+
 </html>
