--- a/recipes/planttart.html
+++ b/recipes/planttart.html
@@ -31,7 +31,7 @@
         <li>A little bit of pepper</li>
     </ul>
 
-    <h4>Step</h4>
+    <h4>Steps</h4>
     <ol>
         <li>Cut and mash the Man-Eating plant fruit</li>
         <li>Flatten the peel of the fruit to make the shell for the tart</li>
